gloo/docs/gloo_routing/virtual_services/authentication/external_auth/test-no-auth-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: test-no-auth
  namespace: gloo-system
spec:
  displayName: test-no-auth
  virtualHost:
    domains:
      - 'foo'
    routes:
      - matcher:
          prefix: /
        routeAction:
          single:
            upstream:
              name: json-upstream
              namespace: gloo-system
